// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usingCrlf.md - markdown-verify 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file

testing line endings

================================================================================
`;

exports[`usingCrlf.md - markdown-verify 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file/*CR*//*CR*/testing line endings/*CR*/
================================================================================
`;

exports[`usingCrlf.md - markdown-verify 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file/*CR*/
/*CR*/
testing line endings/*CR*/

================================================================================
`;

exports[`usingCrlf.md - markdown-verify 4`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file

testing line endings

================================================================================
`;

exports[`usingLf.md - markdown-verify 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file

testing line endings

================================================================================
`;

exports[`usingLf.md - markdown-verify 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file/*CR*//*CR*/testing line endings/*CR*/
================================================================================
`;

exports[`usingLf.md - markdown-verify 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file/*CR*/
/*CR*/
testing line endings/*CR*/

================================================================================
`;

exports[`usingLf.md - markdown-verify 4`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# Markdown file

testing line endings
=====================================output=====================================
# Markdown file

testing line endings

================================================================================
`;
